--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "stichoza/google-translate-php": "^4.1",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
