--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "^1.0",
+        "phpoffice/phpspreadsheet": "^1.25",
         "stichoza/google-translate-php": "^4.1",
         "tymon/jwt-auth": "^1.0"
     },
